--- a/style.css
+++ b/style.css
@@ -45,6 +45,26 @@ h1 {
   text-align: center;
 }
 
+.login-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background-color: #000000;
+
+  width: 100%;
+
+  z-index: 999999;
+}
+.login-nav-list {
+  display: flex;
+  gap: 5rem;
+  justify-content: center;
+  align-items: center;
+
+  list-style: none;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -132,7 +152,7 @@ p {
   width: 100%;
   height: 100%;
   background: #181718ba;
-  z-index: 999;
+  z-index: 999999;
 
   display: flex;
   justify-content: center;
@@ -191,6 +211,8 @@ p {
   font-size: 1rem;
 }
 #categories {
+  margin-top: 10rem;
+
   position: fixed;
   top: 0;
   left: 0;
